Refactor controllers and services to improve user session management and authorization checks. Update Account, Category, and Transaction controllers to ensure user ID validation is consistent. Modify Account and Category models to use userId instead of User object for better clarity. Enhance PlaidService and TransactionService to validate user ownership of accounts and categories during operations. Introduce TransactionSyncResult for managing transaction synchronization from Plaid API.